Fix jpackage config: remove redundant --add-modules